fixed macOS font issue
fixed macOS font issue

--- a/EveningReading/macOS/Info.plist
+++ b/EveningReading/macOS/Info.plist
@@ -29,5 +29,7 @@
 		<string>replylines.ttf</string>
 		<string>tags.ttf</string>
 	</array>
+	<key>ATSApplicationFontsPath</key>
+	<string>.</string>
 </dict>
 </plist>
