iPhone Home Page
iPhone Home Page

--- a/EveningReading/EveningReading.xcodeproj/xcshareddata/xcschemes/EveningReading (Notification).xcscheme
+++ b/EveningReading/EveningReading.xcodeproj/xcshareddata/xcschemes/EveningReading (Notification).xcscheme
@@ -56,10 +56,8 @@
       allowLocationSimulation = "YES"
       launchAutomaticallySubstyle = "8"
       notificationPayloadFile = "EveningReading Extension/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Evening Reading">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "833980A0263C41CE005614E8"
@@ -67,7 +65,7 @@
             BlueprintName = "EveningReading"
             ReferencedContainer = "container:EveningReading.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -77,10 +75,8 @@
       debugDocumentVersioning = "YES"
       launchAutomaticallySubstyle = "8"
       notificationPayloadFile = "EveningReading Extension/PushNotificationPayload.apns">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Evening Reading">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "833980A0263C41CE005614E8"
@@ -88,16 +84,7 @@
             BlueprintName = "EveningReading"
             ReferencedContainer = "container:EveningReading.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "833980A0263C41CE005614E8"
-            BuildableName = "EveningReading.app"
-            BlueprintName = "EveningReading"
-            ReferencedContainer = "container:EveningReading.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
