--- a/EveningReading/EveningReading.xcodeproj/xcshareddata/xcschemes/EveningReading.xcscheme
+++ b/EveningReading/EveningReading.xcodeproj/xcshareddata/xcschemes/EveningReading.xcscheme
@@ -54,10 +54,8 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Evening Reading">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "833980A0263C41CE005614E8"
@@ -65,7 +63,7 @@
             BlueprintName = "EveningReading"
             ReferencedContainer = "container:EveningReading.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -73,10 +71,8 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <RemoteRunnable
-         runnableDebuggingMode = "2"
-         BundleIdentifier = "com.apple.Carousel"
-         RemotePath = "/Evening Reading">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "833980A0263C41CE005614E8"
@@ -84,16 +80,7 @@
             BlueprintName = "EveningReading"
             ReferencedContainer = "container:EveningReading.xcodeproj">
          </BuildableReference>
-      </RemoteRunnable>
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "833980A0263C41CE005614E8"
-            BuildableName = "EveningReading.app"
-            BlueprintName = "EveningReading"
-            ReferencedContainer = "container:EveningReading.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
