--- a/EveningReading/EveningReading.xcodeproj/xcshareddata/xcschemes/EveningReading.xcscheme
+++ b/EveningReading/EveningReading.xcodeproj/xcshareddata/xcschemes/EveningReading.xcscheme
@@ -54,8 +54,10 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Evening Reading">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "833980A0263C41CE005614E8"
@@ -63,7 +65,7 @@
             BlueprintName = "EveningReading"
             ReferencedContainer = "container:EveningReading.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -71,8 +73,10 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <BuildableProductRunnable
-         runnableDebuggingMode = "0">
+      <RemoteRunnable
+         runnableDebuggingMode = "2"
+         BundleIdentifier = "com.apple.Carousel"
+         RemotePath = "/Evening Reading">
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "833980A0263C41CE005614E8"
@@ -80,7 +84,16 @@
             BlueprintName = "EveningReading"
             ReferencedContainer = "container:EveningReading.xcodeproj">
          </BuildableReference>
-      </BuildableProductRunnable>
+      </RemoteRunnable>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "833980A0263C41CE005614E8"
+            BuildableName = "EveningReading.app"
+            BlueprintName = "EveningReading"
+            ReferencedContainer = "container:EveningReading.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
