change APNS registration server and method
change APNS registration server and method

--- a/EveningReading/iOS/Info.plist
+++ b/EveningReading/iOS/Info.plist
@@ -24,6 +24,8 @@
 	<string>$(IMGUR_KEY)</string>
 	<key>LOL_KEY</key>
 	<string>$(LOL_KEY)</string>
+	<key>APNS_KEY</key>
+	<string>$(APNS_KEY)</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>youtube</string>
