--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,9 @@
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
+.DS_Store
+KeyConfig.xcconfig
+
 ## Build generated
 build/
 DerivedData/
